feat: major upgrade for security, DevOps, and open source readiness
- Upgrade Spring Boot 3.2.5 → 3.4.5; add flyway-database-postgresql dependency
- Implement JWT refresh token rotation with Redis blacklist for instant logout
- Add POST /auth/refresh and POST /auth/logout endpoints
- Add audit trail system (AuditLog entity, @Async service, V8 migration)
- Add rate limiting filter (Bucket4j), Nginx security headers, React Error Boundary
- Fix Docker Compose health checks and Redis AOF persistence
- Fix Redis cache default (was silently disabled), ddl-auto validate vs update
- Add CSV injection prevention and cap export queries with PageRequest
- Add GitHub Actions CI pipeline (backend + frontend + docker jobs)
- Add MIT LICENSE, complete .env.example, rewrite README for open source
- Fix @MockBean → @MockitoBean across all test files (Spring Boot 3.4 deprecation)
- Fix AuthResponse constructor mismatch in AuthControllerTest after adding refreshToken field

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>